Complete Front-page

--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!-- <div class = "front-page">
+<div class = "front-page">
   <div class="login-box">
       <img src="../assets/Images/Logo/logo_transparent.png" alt="logo" id="logo-front-page">
       <form>
@@ -10,12 +10,8 @@
             <input type="password" class="form-control" id="password" placeholder="Password">
           </div>
           <button type="submit" class="btn btn-success">Log In</button>
-          
-        </form>
-        
+          <button class="btn btn-default" (click)="openFormModal()">Register</button>
+      </form>
   </div>
-</div> -->
-  
-<button class="btn btn-default" (click)="openFormModal()">Register</button>
-
+</div>
 <!-- <router-outlet></router-outlet> -->
