--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,7 @@
 <div class = "front-page">
     <div class="login-box">
         <img src="../assets/Images/Logo/logo_transparent.png" alt="logo" id="logo-front-page">
-        <form>
-            <div class="form-group">
-              <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Enter Username">
-            </div>
-            <div class="form-group">
-              <input type="password" class="form-control" id="password" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-success">Log In</button>
-            <button class="btn btn-default" (click)="openFormModal()">Register</button>
-        </form>
+        <app-login *ngIf="!IsLogin()"></app-login>
+        <app-search-bar *ngIf="IsLogin()"></app-search-bar>
     </div>
   </div>
