--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -11,5 +11,5 @@
     <option value="2">Two</option>
     <option value="3">Three</option>
   </select>
-  <button type="submit" class="btn btn-primary" (click)="OnSearch()">Search</button>
+  <button type="submit" class="btn btn-primary" (click)="onSearch()">Search</button>
 </div>
