--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,16 +1,16 @@
 <div class="input-group mb-3">
-    <select class="custom-select temp" (change)="onCategoryChange($event.target.value)">
-        <option selected value="-1">Categories</option>
-        <option *ngFor = "let category of categories" [value] = "category.Id">
-            {{ category.Name }}
-        </option>
-    </select>
-    <select class="custom-select" (change)="onSubCategoryChange($event.target.value)">
-        <option selected value="-1">SubCategories</option>
-        <option *ngFor = "let subcategory of subCategories" [value] = "subcategory.Id">
-            {{ subcategory.Name }}
-        </option>
-    </select>
-    <button type="submit" class="btn btn-primary" (click)="onSearch()" [disabled]="isDisableSearch()">Search</button>
+  <select class="custom-select temp" (change)="onCategoryChange($event.target.value)">
+    <option selected value="-1">Categories</option>
+    <option *ngFor="let category of categories" [value]="category.Id">
+      {{ category.Name }}
+    </option>
+  </select>
+  <select class="custom-select" (change)="onSubCategoryChange($event.target.value)">
+    <option selected value="-1">SubCategories</option>
+    <option *ngFor="let subcategory of subCategories" [value]="subcategory.Id">
+      {{ subcategory.Name }}
+    </option>
+  </select>
+  <button type="submit" class="btn btn-primary" (click)="onSearch()" [disabled]="isDisableSearch()">Search</button>
 </div>
-<button type="submit" class="btn btn-warning" (click)="onLogOut()">Log out</button>
+<!-- <button type="submit" class="btn btn-warning" (click)="onLogOut()">Log out</button> -->
