--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -1,5 +1,82 @@
 <app-nav-bar></app-nav-bar>
-<h1>
-    test
-    test
-</h1>
+<div id="product-filter">
+  <div id="search-div">
+    <span>Search: </span>
+    <button type="submit" class="btn btn-secondary">Save</button>
+    <button type="button" class="btn btn-danger">Clear</button>
+    <button type="button" class="btn btn-info">More</button>
+  </div>
+  <div id="accordion">
+
+    <div class="card">
+      <div class="card-header">
+        <a class="card-link" data-toggle="collapse" href="#collapseOne">
+          Product Type
+        </a>
+      </div>
+      <div id="collapseOne" class="collapse show">
+        <div class="card-body test">
+          <div class="row">
+            <div class="col">
+              <label><strong> Model Year:</strong></label>
+            </div>
+            <div class="col">
+              <input type="number" class="form-control">
+            </div>
+            __
+            <div class="col">
+              <input type="number" class="form-control">
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+          Technical Specifications
+        </a>
+      </div>
+      <div id="collapseTwo" class="collapse">
+        <div class="card-body test">
+
+          <div class="custom-slider" *ngFor="let options of listOptions; let i = index">
+            {{ filterSendDto.TechPropsMinMaxValueDtos[i].Name }}
+            <ng5-slider [(value)]="filterSendDto.TechPropsMinMaxValueDtos[i].MinvValue"
+              [(highValue)]="filterSendDto.TechPropsMinMaxValueDtos[i].MaxValue" [options]="options">
+            </ng5-slider>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+          Manufacturers
+        </a>
+      </div>
+      <div id="collapseThree" class="collapse">
+        <div class="card-body">
+          <div class="row">
+            <div class="col">
+              <label><strong>Manufacturers:</strong></label>
+            </div>
+            <div class="col">
+              <select name="manufacturer" [(ngModel)]="selectedManufacturer">
+                <option value="-1">All</option>
+                <option *ngFor="let manufacturer of filterSendDto.Manufacturers" [value]="manufacturer.Id">
+                  {{manufacturer.Name}}
+                </option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
