--- a/src/app/front-page/nav-bar/nav-bar.component.html
+++ b/src/app/front-page/nav-bar/nav-bar.component.html
@@ -1,3 +1,14 @@
-<p>
-  nav-bar works!
-</p>
+<nav class="navbar navbar-defaul color">
+    <div class="container-fluid">
+        <a class="navbar-brand brand" href="#">Joole</a>
+        
+        <div class="nav navbar-nav search-bar">
+            <app-search-bar></app-search-bar>
+        </div>
+
+        <div class="form-inline">
+            <img src= {{user?.Image}} width="50" height="50" alt="">
+            <button class="btn btn-danger my-2 my-sm-0" type="submit" (click)="onLogOut()">Log Out</button>
+        </div>
+    </div>
+</nav>
