--- a/src/app/front-page/product/product-documentation/product-documentation.component.html
+++ b/src/app/front-page/product/product-documentation/product-documentation.component.html
@@ -1,3 +1,37 @@
-<p>
-  product-documentation works!
-</p>
+<div class="container">
+  <h2>Product Documentation</h2>
+  <div class="row">
+    <div class="col">
+      <div class="row">
+        <img src="../../../../assets/Images/Doc/word.png" alt="">
+        <label><strong>CSI - Three Parts Specification</strong> (DOC)</label>
+      </div>
+      <div class="row">
+        <img src="../../../../assets/Images/Doc/pdf.png" alt="">
+        <label><strong>Submittal</strong> (PDF)</label>
+      </div>
+      <div class="row">
+        <img src="../../../../assets/Images/Doc/pdf.png" alt="">
+        <label><strong>Control Options</strong> (PDF)</label>
+      </div>
+      <div class="row">
+        <img src="../../../../assets/Images/Doc/pdf.png" alt="">
+        <label><strong>Photometric Data</strong> (PDF)</label>
+      </div>
+    </div>
+    <div class="col">
+      <div class="row">
+        <img src="../../../../assets/Images/Doc/2352-512.png" alt="">
+        <label><strong>BIM</strong> (RVT)</label>
+      </div>
+      <div class="row">
+        <img src="../../../../assets/Images/Doc/dwg.jpg" alt="">
+        <label><strong>Plan Views</strong> (DWG)</label>
+      </div>
+      <div class="row">
+        <img src="../../../../assets/Images/Doc/dwg.jpg" alt="">
+        <label><strong>Elevation Views</strong> (DWG)</label>
+      </div>
+    </div>
+  </div>
+</div>
