--- a/src/app/front-page/product/product.component.css
+++ b/src/app/front-page/product/product.component.css
@@ -1,16 +1,30 @@
-.container {
-  height: 500px;
+.intro {
   width: 100%;
-  border-bottom: 1px solid rgba(78, 42, 60, 0.12);
+  display: inline-block;
+  padding: 0 20px;
 }
 
-.btn-container {
-  text-align: center;
-  align-items: center;
-  max-width: 100%;
+img {
+  height: 120px;
+  width: 120px;
+  margin-right: 30px;
 }
 
-.btn {
-  margin-top: 150px;
-  padding: 15px 40px;
+#product {
+  font-size: 30px;
+  color: blue;
+}
+
+button {
+  float: right;
+  margin-top: 40px;
+}
+
+.url {
+  border-bottom: 1px solid rgb(223, 220, 220);
+  padding: 5px 20px;
+}
+
+.url span {
+  color: blue;
 }
