--- a/src/app/front-page/product/product.component.html
+++ b/src/app/front-page/product/product.component.html
@@ -1,9 +1,19 @@
-<p>
-  product works!
-</p>
+<div class="url">
+  <span>{{productDto?.Product.SubCategory.Category.Name}} > </span>
+  <a [routerLink]="['/front-page/products', productDto?.Product.SubCategory.CategoryId, productDto?.Product.SubCategory.Id]"
+    routerLinkActive="active"><span>{{productDto?.Product.SubCategory.Name}}</span> </a>
+  <span> > </span>
+  <span style="color: rgb(145, 142, 142)">{{ productDto?.Product.Model }}</span>
+</div>
+<div class="intro">
+  <img src={{productDto?.Product.Image}}>
+  <span id="product">{{ productDto?.Product.Manufacturer.Name }} / {{ productDto?.Product.Series.Name }} /
+    {{ productDto?.Product.Model }}</span>
+  <button class="btn btn-primary" disabled>Add To</button>
+</div>
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" routerLink="./product-summary" routerLinkActive="active">Product Summary</a>
+    <a class="nav-link" routerLink="./product-summary" routerLinkActive=" active">Product Summary</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="./product-details" routerLinkActive="active">Product Details</a>
